--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!--Home Section-->
     <article id="Home" class="py-5 bg-light text-center">
     <div class="container">
-        <h1>Yashu,Sharmi</h1>
+        <h1>Yashika</h1>
         <p>UG student</p>
         <a href="#about"class="btn border rounded-pill border-dark bg-dark text-white">Read more</a>
     </div>
@@ -38,8 +38,8 @@
         <div class="container">
             <div class="col-6">
                 <h2>About me</h2>
-                <p>hello! I am Yashika from bsc computer science department
-                    Im a 1st year student
+                <p>hello! I am Yashika from bsc computer science department,
+                    I'm a 1st year student....
                 </p>
                 <p><strong>Click here:</strong><a href="./resume.html/resume.html"> Resume</a></p>
             </div>
